--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,30 @@
+.center { 
+    height: 100%;
+    position: relative;
+  }
+  
+  .center p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  .readyToScan {
+      color: white;
+      text-transform: capitalize;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
 
+  .nfcTitle {
+    color: #008B8B;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .footer-md:before, .footer-ios:before {
+    width: auto;
+  }
