--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,5 +14,5 @@
   </div>
 </ion-content>
 <ion-footer text-center class="nfc-footer" >
-  <ion-button class="readyToScan" (click)="onStartScan()" clear  expand="full"> Ready To Scan</ion-button>
+  <ion-button class="readyToScan" (click)="onStartScan()" expand="block" color="none"> Ready To Scan</ion-button>
 </ion-footer>
