--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,8 +11,9 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
   }
+
   .readyToScan {
-      color: white;
+      color:#008B8B;
       text-transform: capitalize;
       -webkit-box-shadow: none;
       box-shadow: none;
